.metadata/.plugins/org.eclipse.cdt.ui/f767_http_Rtaos_demo.build.log
23:33:30 **** Incremental Build of configuration Debug for project f767_http_Rtaos_demo ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F767xx -I../Inc -I../Middlewares/Third_Party/LwIP/src/include -I../Middlewares/Third_Party/LwIP/system -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -I../Middlewares/Third_Party/LwIP/src/include/netif/ppp -I../Middlewares/Third_Party/LwIP/src/apps/http -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Middlewares/Third_Party/LwIP/src/include/lwip -I../Middlewares/Third_Party/LwIP/src/include/lwip/apps -I../Middlewares/Third_Party/LwIP/src/include/lwip/priv -I../Middlewares/Third_Party/LwIP/src/include/lwip/prot -I../Middlewares/Third_Party/LwIP/src/include/netif -I../Middlewares/Third_Party/LwIP/src/include/compat/posix -I../Middlewares/Third_Party/LwIP/src/include/compat/posix/arpa -I../Middlewares/Third_Party/LwIP/src/include/compat/posix/net -I../Middlewares/Third_Party/LwIP/src/include/compat/posix/sys -I../Middlewares/Third_Party/LwIP/src/include/compat/stdc -I../Middlewares/Third_Party/LwIP/system/arch -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Middlewares\Third_Party\LwIP\src\netif\ppp\ecp.o ..\Middlewares\Third_Party\LwIP\src\netif\ppp\ecp.c 
In file included from ../Middlewares/Third_Party/LwIP/src/include/lwip/netif.h:46:0,
                 from ../Inc/main.h:35,
                 from ../Inc/lwipopts.h:25,
                 from ../Middlewares/Third_Party/LwIP/src/include/lwip/opt.h:51,
                 from ../Middlewares/Third_Party/LwIP/src/include/netif/ppp/ppp_opts.h:31,
                 from ..\Middlewares\Third_Party\LwIP\src\netif\ppp\ecp.c:60:
../Middlewares/Third_Party/LwIP/src/include/lwip/ip_addr.h:318:9: error: unknown type name 'ip6_addr_t'
 typedef ip6_addr_t ip_addr_t;
         ^~~~~~~~~~
In file included from ../Middlewares/Third_Party/LwIP/src/include/lwip/netif.h:49:0,
                 from ../Inc/main.h:35,
                 from ../Inc/lwipopts.h:25,
                 from ../Middlewares/Third_Party/LwIP/src/include/lwip/opt.h:51,
                 from ../Middlewares/Third_Party/LwIP/src/include/netif/ppp/ppp_opts.h:31,
                 from ..\Middlewares\Third_Party\LwIP\src\netif\ppp\ecp.c:60:
../Middlewares/Third_Party/LwIP/src/include/lwip/pbuf.h:93:20: error: 'PBUF_LINK_ENCAPSULATION_HLEN' undeclared here (not in a function)
   PBUF_TRANSPORT = PBUF_LINK_ENCAPSULATION_HLEN + PBUF_LINK_HLEN + PBUF_IP_HLEN + PBUF_TRANSPORT_HLEN,
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Middlewares/Third_Party/LwIP/src/include/lwip/pbuf.h:93:51: error: 'PBUF_LINK_HLEN' undeclared here (not in a function)
   PBUF_TRANSPORT = PBUF_LINK_ENCAPSULATION_HLEN + PBUF_LINK_HLEN + PBUF_IP_HLEN + PBUF_TRANSPORT_HLEN,
                                                   ^~~~~~~~~~~~~~
../Middlewares/Third_Party/LwIP/src/include/lwip/pbuf.h:218:3: error: unknown type name 'LWIP_PBUF_REF_T'
   LWIP_PBUF_REF_T ref;
   ^~~~~~~~~~~~~~~

23:33:30 Build Finished (took 283ms)

